--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.6 <4.0.0'
 dependencies:
+  cached_network_image: ^3.2.0
   flutter:
     sdk: flutter
 dev_dependencies:
