--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,8 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.6 <4.0.0'
 dependencies:
+  provider: ^6.0.3
+  intl: ^0.17.0
   cached_network_image: ^3.2.0
   flutter:
     sdk: flutter
