--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,9 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.6 <4.0.0'
 dependencies:
+  flutter_dotenv: ^5.0.2
+  http: ^0.13.4
+  shared_preferences: ^2.0.15
   provider: ^6.0.3
   intl: ^0.17.0
   cached_network_image: ^3.2.0
@@ -15,6 +18,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
 flutter:
+  assets:
+    - .env
   uses-material-design: true
   fonts:
   - family: Lato
