--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.6 <4.0.0'
 dependencies:
+  foundation:
   flutter_dotenv: ^5.0.2
   http: ^0.13.4
   shared_preferences: ^2.0.15
@@ -19,6 +20,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 flutter:
   assets:
+    - assets/Images/
     - .env
   uses-material-design: true
   fonts:
