--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,8 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.6 <4.0.0'
 dependencies:
+  crypto: 
+  flutter_zalopay_sdk:
   after_layout: ^1.2.0
   foundation:
   flutter_dotenv: ^5.0.2
