--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
 dependencies:
   crypto: 
   flutter_zalopay_sdk:
+  flutter_speed_dial:
+  bubble:
   after_layout: ^1.2.0
   foundation:
   flutter_dotenv: ^5.0.2
